# Coding-Collections

./: .gitignore  README.md
30days_python/: ex10_blackslash.ipynb  ex13_argument.py  ex13_argument_1.py  ex13_argument_2.py  ex14_argu_raw.py  ex14_argu_raw_1.py  ex14_argu_raw_2.py  ex15_openfile.py  ex15_openfile2.py  ex15_openfile_raw.py  ex16_readwrite.py  ex16_readwrite2.py  ex16_test2.txt  ex17_readwritefile.py  ex17_readwritefile2.py  ex17_test.txt  ex18_function.py  ex19_functionvariables.py  ex20_functionfile.py  ex20_test.txt  ex21_functionreturn.py  ex24_exercise.py  ex25_exercise.py  ex26.py  ex28_True_or_False.py  ex29_if.py  ex30_ifelse.py  ex31.py  ex32_list_and_ring.py  ex33_while.py  ex33_while2.py  ex35_branches.py  ex35_branches2.py  ex39_list.py  ex39_test0.py  ex39_test1.py  ex4-5_variables.py  ex40_dict.py  ex40_dict2.py  ex40_dict3.py  (+13 more)
BayesianMethodsForHackers/: 000001SS.csv
BlockChain/: bitcoin-principle.ipynb
C/: a.out  bitcount.c  struct.ipynb
CSAPP/: Untitled.ipynb
CppPrimer/: 1.1.cpp  1.2.cpp  1.3.cpp  1.4.1.cpp  README.md  a.out
Cython/: setup.py
Exercise/: notebook.ipynb
LiaoPython3/: 13RE.ipynb  14Module.ipynb  15ThirdModule.ipynb  17GUI.ipynb  18NetworkProgramming.ipynb  20DB.ipynb  AOOP.ipynb  FunctionalProgramming.ipynb  OOP.ipynb  RE.ipynb  deadring.py  dowhile.py  echo_client.py  echo_server.py  fact.py  input.py  listg.py  myabs.py  sina.html  test.db  test2.db  testmodule.py  udp_client.py  udp_server.py
Lisp/: Lisp_root.md
Rust/tokenizers/: Cargo.toml
Rust/tokenizers/src/: lib.rs  normalizer.rs
Zheda-C/: final.c  (+2 more)
(+435 files in other folders)
