[package]
name = "tokenizers"
version = "0.1.0"
authors = ["Yam <haoshaochun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
rand = "0.7.2"
regex = "1.3.1"
regex-syntax = "0.6.12"
rayon = "1.2.0"
serde = "1.0"
serde_json = "1.0"
clap = "2.33.0"
unicode-normalization-alignments = "0.1.12"
unicode_categories = "0.1.1"
indicatif = "0.14.0"
